# colonio-simulator-node

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  sample.json
conf/: plane.json  sphere.json
src/: base.cpp  base.hpp  config.cpp  config.hpp  logger.cpp  logger.hpp  main.cpp  mongo.cpp  mongo.hpp
src/plane/: plane.cpp  plane.hpp
src/sphere/: sphere.cpp  sphere.hpp
